public/css/styles.css
:root {
  /* Color pallete */
  --black : black;
  --white : white;
  --aqua : rgb(23, 183, 207);
  --aqua-fade: rgba(240, 248, 255, 0.585);

  /*- Typography -*/
  --big-font : Arial;
}

/* Change Box Model */
*,
*:before,
*:after {
  box-sizing: border-box;
  padding: 0px;
  margin: 0px;
}

/*- Header -*/
#top-header {
  padding: 10px;
  display: grid;
  grid-template-columns: 2fr 1fr;
  min-height: 30px;
  & .siteName {
    text-align: start;
    & a {
      font-size: 2.3rem;
    font-weight: 700;
    font-family: var(--big-font);
    text-decoration: none;
    color: var(--black);
    }
  }
  & #tools {
    text-align: end;
    & a {
      font-family: var(--big-font);
    text-decoration: none;
    color: var(--black);
    }
  }
}

/*- Navigation -*/

nav {  
    background-color: var(--black);
    padding: 5px;
    margin-top: 10px;
    & ul {
      display: flex;
      flex-direction: row;
      list-style: none;
      justify-content: space-around;
      color: var(--white);
      padding: 10px;
      font-family: var(--big-font);
    }
}

/*- Index (Main) -*/

main {
  & h1 {
    padding: 10px;
    font-family: var(--big-font);
    font-size: larger;
  }
  & .delorean {
    display: flex;
    justify-content: center;
    position: relative; 
    & img {
      display: block;
      width: 23em;
      height: auto;
    }
    & .box {
      position: absolute;
      display: grid;
      grid-column: 1fr;
      grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
      max-width: 190px;
      background-color: var(--aqua-fade);
      border-radius: 10px;
      font-family: var(--big-font);
      color: var(--aqua);
      left: 5%;
      top: 10%;
      z-index: 1;
      & button {
        background-color: var(--aqua);
        border: none;
        font-family: var(--big-font);
        font-size: larger;
        border-radius: 10px;
      }
    }
  }
  & .reviews {
    display: flex;
    flex-direction: column;
    & h2 {
      font-family: var(--big-font);
      padding: 5px;
    }
    & ul {
      padding: 5px;
      padding-left: 20px;
      & li {
        font-family: var(--big-font);
        padding-bottom: 5px;
      }
    }
  }
  & .upgrade {
    & h2 {
      font-family: var(--big-font);
      padding: 5px;
      padding-bottom: 10px;
    }
    & .icons {
      font-family: var(--big-font);
      display: grid;
      grid-template-columns: 1fr 1fr;
      text-align: center;
      margin: 5px;
      gap: 10px;
      & div {
        display: flex;
        flex-direction: column;
        padding: 5px;
        align-items: center;
        border: 1px solid;
        background-color: var(--aqua);
        & img {
          width: 35%;
          height: auto;
        }
        & a {
          color: var(--white);
        }
      }
    }
  }
}

/*- Footer -*/
footer {
  font-family: var(--big-font);
  font-size: medium;
  padding-top: 10px;
}

/*--- Big Screens ---*/

@media only screen and (min-width: 37.5em) {
  body {
    background: url("../images/site/small_check.jpg") repeat-y left top;
  }
  #wrapper {
    display: grid;
    margin: 15px 100px 0px 100px;
    padding: 10px;
    border: 5px solid var(--aqua);
    border-radius: 15px;
    background-color: var(--white);
  }
 main {
  & .delorean {
    display: flex;
    justify-content: center;
    position: relative; 
    & img {
      display: block;
      width: 30em;
      height: auto;
    }
  }
  & .reviews-upgrades {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "b a";
    padding: 10px;
  }
  & .reviews {
    grid-area: a;
    padding: 10px;
    margin-top: 10px;
    & h2 {
      font-size: 1.3rem;
    }
    & ul li {
      font-size: 1.1rem;
      
    }
  }
  & .upgrade {
    grid-area: b;
    padding: 10px;
    & h2 {
      font-family: var(--big-font);
      font-size: 1.2rem;
      padding: 5px;
      padding-bottom: 10px;
    }
    & .icons {
      font-family: var(--big-font);
      display: grid;
      grid-template-columns: 1fr 1fr;
      text-align: center;
      gap: 10px;
      & div {
        display: flex;
        flex-direction: column;
        padding: 5px;
        align-items: center;
        border: 1px solid;
        background-color: var(--aqua);
        & img {
          width: 35%;
          height: auto;
        }
      }
    }
  }
 }
}

@media only screen and (min-width: 50em) {
  #wrapper {
    display: grid;
    margin: 15px 200px 15px 200px;
    padding: 10px;
    border: 5px solid var(--aqua);
    border-radius: 15px;
    background-color: var(--white);
  }
  main {
    & .delorean {
      & img {
        width: 33em;
      }
      & .box {
        min-width: 230px;
        min-height: 190px;
      }
    }
    & .reviews {
    grid-area: a;
    padding: 10px;
    margin-top: 10px;
      & h2 {
        font-size: 1.3rem;
      }
      & ul li {
        font-size: 1.1rem;
        padding: 10px;
      }
    }
  }
}

